--- a/recipe/templates/recipe/member_recipes.html
+++ b/recipe/templates/recipe/member_recipes.html
@@ -1,51 +1,51 @@
 {% extends "base.html" %}
 {% load static %}
 {% block content %}
-    <h2>My Recipes</h2>
-    {% if member_list %}
-    <div class="container-fluid">
-        <div class="row">
-          <!-- Recipes Entries Column -->
-          <div class="col-12 mt-3 left">
-            <div class="row">
-              {% for recipe in member_list %}
-              <div class="col-md-4">
-                <div class="card mb-4">
-                  <div class="card-body">
-                    <div class="image-container">
-                      <div class="image-flash">
-                        <a href="{% url 'recipe:recipe_detail' recipe.slug %}" class="recipe-link">
-                          <!-- <a href="#" class="recipe-link"></a> -->
-                          <h2 class="card-title">{{ recipe.title }}</h2>
-                        </a>
-                        <p class="author">Author: {{ recipe.author }}</p>
-                      </div>
-                    </div>
-                    <hr />
-                    <p class="card-text text-muted h6">{{ recipe.created_on}}</p>
-                  </div>
-                </div>
-              </div>
-              {% if forloop.counter|divisibleby:3 %}
+<h2>My Recipes</h2>
+{% if member_list %}
+<div class="container-fluid">
+  <div class="row">
+    <div class="col-12 mt-2">
+      <div class="row">
+        {% for recipe in member_list %}
+        <div class="col-lg-3">
+          <div class="card mb-4">
+            <div class="list card-body">
+              {% if "placeholder" in recipe.featured_image.url %}
+              <img class="img-fluid w-100" style="height: 250px; object-fit: cover"
+                src="{% static 'images/default.jpg' %}" alt="placeholder image" />
+              {% else %}
+              <img class="img-fluid w-100" style="height: 250px; object-fit: cover"
+                src=" {{ recipe.featured_image.url }}" alt="{{ recipe.title }}" />
+              {% endif %}
+              <a href="{% url 'recipe:recipe_detail' recipe.slug %}" class="recipe-link">
+              <!-- <a href="#" class="recipe-link"></a> -->
+              <h2 class="card-title">{{ recipe.title }}</h2>
+              </a>
+              <p class="author text-muted">Author: {{ recipe.author }}</p>
+            <hr />
+              <p class="card-text small text-muted">{{ recipe.created_on}}</p>
             </div>
-            <div class="row">{% endif %} {% endfor %}</div>
           </div>
         </div>
-        {% if is_paginated %}
-          <nav aria-label="Page navigation">
-              <ul class="pagination justify-content-center">
-                  {% if page_obj.has_previous %}
-                  <li><a href="?page={{ page_obj.previous_page_number }}" class="page-link">&laquo; PREV </a></li>
-                  {% endif %}
-                  {% if page_obj.has_next %}
-                  <li><a href="?page={{ page_obj.next_page_number }}" class="page-link"> NEXT &raquo;</a></li>
-                  {% endif %}
-              </ul>
-          </nav>
-          {% endif %}
-      </div>
-      
-    {% else %}
-        <p>You haven't submitted any recipes yet.</p>
+      {% if forloop.counter|divisibleby:4 %}
+    </div>
+    <div class="row">{% endif %} {% endfor %}</div>
+  </div>
+{% if is_paginated %}
+<nav aria-label="Page navigation">
+  <ul class="pagination justify-content-center">
+    {% if page_obj.has_previous %}
+    <li><a href="?page={{ page_obj.previous_page_number }}" class="page-link">&laquo; PREV </a></li>
     {% endif %}
+    {% if page_obj.has_next %}
+    <li><a href="?page={{ page_obj.next_page_number }}" class="page-link"> NEXT &raquo;</a></li>
+    {% endif %}
+  </ul>
+</nav>
+{% endif %}
+{% else %}
+  <p>You haven't submitted any recipes yet.</p>
+{% endif %}
+</div>
 {% endblock %}
