--- a/member/templates/member/register.html
+++ b/member/templates/member/register.html
@@ -8,12 +8,12 @@
 </head>
 <body>
     <h1>Hello World!</h1>
-    {% block message %}
-    <p>Register here to share recipes on our site.</p>
+    {% block content %}
+    <p>Register here to join our community.</p>
     <form action="/member/register/" method="post">
         {% csrf_token %}
-        {{ form }}
-        <button>Submit</button>
+        {{ form.as_p }}
+        <button class="btn btn-primary">Submit</button>
     </form>
     {% endblock %}
 </body>
