--- a/recipe/templates/recipe/add_recipe.html
+++ b/recipe/templates/recipe/add_recipe.html
@@ -1,5 +1,4 @@
-{% extends "base.html" %} {% load static %} {% load crispy_forms_tags %} 
-
+{% extends "base.html" %} {% load static %}
 <!DOCTYPE html>
 <html>
   <head>
@@ -8,7 +7,7 @@
   {% block content %}
   <body>
     <h2>Add a New Recipe</h2>
-    <form method="POST">
+    <form method="POST" enctype="multipart/form-data">
       {% csrf_token %} {{ form.as_p }}
       <button type="submit">Save Recipe</button>
     </form>
