--- a/recipe/templates/recipe/edit_recipe.html
+++ b/recipe/templates/recipe/edit_recipe.html
@@ -3,7 +3,7 @@
   {% block content %}
   <body>
     <h2>Edit Recipe: {{ recipe.title }}</h2>
-    <form method="POST">
+    <form method="POST" enctype="multipart/form-data">
 	{% csrf_token %} 
 	{{ form.as_p }}
     <button type="submit">Save Changes</button>
