--- a/templates/base.html
+++ b/templates/base.html
@@ -3,123 +3,135 @@
 
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <!-- <link rel="preconnect" href="https://fonts.googleapis.com" />
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+  <!-- <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Quicksand:wght@300..700&display=swap"
       rel="stylesheet"
     /> -->
 
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
-      crossorigin="anonymous"
-    />
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-      crossorigin="anonymous"
-    ></script>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous" />
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+    crossorigin="anonymous"></script>
 
-    <script src="https://kit.fontawesome.com/7fa9d59fcb.js" crossorigin="anonymous"></script>
+  <script src="https://kit.fontawesome.com/7fa9d59fcb.js" crossorigin="anonymous"></script>
 
-    <!-- Custom CSS -->
-    <link rel="stylesheet" href="{% static 'css/style.css' %}" />
+  <!-- Custom CSS -->
+  <link rel="stylesheet" href="{% static 'css/style.css' %}" />
 
-    <title>the recipe hub</title>
-  </head>
-  
-  <div class="container">
-    <body class="d-flex flex-column min-vh-100">
-      <!--  Navigation -->
-      <nav class="navbar navbar-expand-lg bg-body-tertiary">
-        <div class="container-fluid">
-          <a class="navbar-brand" href="{% url 'recipe:list' %}">the recipe hub</a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <!-- Left-side navigation links -->
-            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-              <li class="nav-item">
-                <a class="nav-link {% if request.path == list_url %}active{% endif %}" href="{{ list_url }}">home</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link {% if request.path == about_url %}active{% endif %}" href="{{ about_url }}">about</a>
-              </li>
-            </ul>
-  
-            <!-- Right-side login/logout + search -->
-            <div class="d-flex align-items-center ms-auto">
-              {% if user.is_authenticated %}
-                <form action="{% url 'member:member_logout' %}" method="post" class="me-3">
-                  {% csrf_token %}
-                  <button type="submit" class="logout">logout</button>
-                </form>
-              {% else %}
-                <a class="link me-3" href="{% url 'member:member_login' %}">login/register</a>
-              {% endif %}
-              <form class="d-flex" role="search" method="GET" action="{% url 'recipe:recipe_search' %}">
-                <input class="form-control me-2" type="search" name="query" placeholder="search" aria-label="Search">
-                <button class="btn btn-primary" type="submit">search</button>
-              </form>
-            </div>
+  <title>the recipe hub</title>
+</head>
+
+<div class="container">
+
+  <body class="d-flex flex-column min-vh-100">
+    <!--  Navigation -->
+    <nav class="navbar navbar-expand-lg bg-body-tertiary">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="{% url 'recipe:list' %}">the recipe hub</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+          aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <!-- Left-side navigation links -->
+          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+            <li class="nav-item">
+              <a class="nav-link {% if request.path == list_url %}active{% endif %}" href="{{ list_url }}">home</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link {% if request.path == about_url %}active{% endif %}" href="{{ about_url }}">about</a>
+            </li>
+          </ul>
+
+          <!-- Right-side login/logout + search -->
+          <div class="d-flex align-items-center ms-auto">
+            {% if user.is_authenticated %}
+            <form action="{% url 'member:member_logout' %}" method="post" class="me-3">
+              {% csrf_token %}
+              <button type="submit" class="logout">logout</button>
+            </form>
+            {% else %}
+            <a class="link me-3" href="{% url 'member:member_login' %}">login/register</a>
+            {% endif %}
+            <form class="d-flex" role="search" method="GET" action="{% url 'recipe:recipe_search' %}">
+              <input class="form-control me-2" type="search" name="query" placeholder="search" aria-label="Search">
+              <button class="btn btn-primary" type="submit">search</button>
+            </form>
           </div>
         </div>
-      </nav>
-
-        <section class="custom-content container py-3">
-          {% if user.is_authenticated %}
-            <!-- if recipe has just been submitted display confirmation message else welcome back member -->
-                    {% if messages %}
-                          <div class="messages">
-                            {% for message in messages %}
-                                <div class="welcom alert alert-{{ message.tags }}">{{ message }}
-                                <p>Thanks {{ user.username }}! You can add or manage your recipes below: </p>
-                            {% endfor %}		
-                    {% else %}
-                            <p>Welcome, {{ user.username }}!</p>
-                          {% endif %}
-            <!-- end if recipe has just been submitted display confirmation message -->
-            <!-- Display create recipe and manage recipes for members -->
-            {% if request.user.is_superuser %}
-            <div class="d-grid gap-2 d-md-block">
-              <a class="btn btn-primary btn-sm" href=" /add_recipe/">Create a Recipe</a>
-              <a class="btn btn-primary btn-sm" href=" /member_recipes/">Manage My Recipes</a>
-              <a class="btn btn-primary btn-sm" href=" /admin/">Admin Panel</a>
-            </div>
-            {% else %}
-              <p><a class="btn btn-primary btn-sm" href=" /add_recipe/">Create a Recipe</a>
-              <a class="btn btn-primary btn-sm" href=" /member_recipes/">Manage My Recipes</a></p>
-            {% endif %}
-          </div> 
-          {% else %}<!-- else User is not authenticated therefore not a member display simple welcome message -->
-            <h2>Welcome! </h2>
-            <p class="mb-0">Feel free to peruse and enjoy. </p>
-            <p class="mb-0">If you'd like to share recipes with us, register now and start sharing!</p>
-          {% endif %}
-        </section>
-          
-        <main class="flex-grow-1 container py-4">
-          {% block content %}
-          <p>This is my default base.html content.</p>
-          {% endblock content %}
-        </main>
       </div>
-    </body>
-  </div>
-        <!-- Footer -->
-          <footer class="mt-auto text-white text-center py-3">
-            <p class="m-0 text-center text-white"><i class="fa-regular fa-copyright fa-xs"></i> the recipe hub | Follow us: 
-              <i class="fa-brands fa-facebook ms-3" href=""></i>
-              <i class="fa-brands fa-square-instagram ms-3" href=""></i>
-              <i class="fab fa-youtube-square ms-3" href=""></i>
-            </p>
-          </footer>
-      
+    </nav>
+
+    <section class="custom-content container py-3">
+      {% if user.is_authenticated %}
+      <!-- if recipe has just been submitted display confirmation message else welcome back member -->
+      {% if messages %}
+      <div class="messages">
+        {% for message in messages %}
+        <div class="welcom alert alert-{{ message.tags }}">{{ message }}
+          <p>Thanks {{ user.username }}! You can add or manage your recipes below: </p>
+          {% endfor %}
+          {% else %}
+          <p>Welcome, {{ user.username }}!</p>
+          {% endif %}
+          <!-- end if recipe has just been submitted display confirmation message -->
+          <!-- Display create recipe and manage recipes for members -->
+          {% if request.user.is_superuser %}
+          <div class="d-grid gap-2 d-md-block">
+            <a class="btn btn-primary btn-sm" href=" /add_recipe/">Create a Recipe</a>
+            <a class="btn btn-primary btn-sm" href=" /member_recipes/">Manage My Recipes</a>
+            <a class="btn btn-primary btn-sm" href=" /admin/">Admin Panel</a>
+          </div>
+          {% else %}
+          <p><a class="btn btn-primary btn-sm" href=" /add_recipe/">Create a Recipe</a>
+            <a class="btn btn-primary btn-sm" href=" /member_recipes/">Manage My Recipes</a>
+          </p>
+          {% endif %}
+        </div>
+        {% else %}<!-- else User is not authenticated therefore not a member display simple welcome message -->
+        <h2>Welcome! </h2>
+        <p class="mb-0">Feel free to peruse and enjoy. </p>
+        <p class="mb-0">If you'd like to share recipes with us, register now and start sharing!</p>
+        {% endif %}
+    </section>
+
+    <main class="flex-grow-1 container py-4">
+      {% block content %}
+      <p></p>
+      {% endblock content %}
+      <!-- displaying Django messages -->
+      <div class="container">
+        <div class="row">
+          <div class="col-md-8 offset-md-2">
+            {% for message in messages %}
+            <div class="alert {{ message.tags }} alert-dismissible
+        fade show" id="msg" role="alert">
+              {{ message | safe }}
+              <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+            </div>
+            {% endfor %}
+          </div>
+        </div>
+      </div>
+    </main>
+</div>
+</body>
+</div>
+<!-- Footer -->
+<footer class="mt-auto text-white text-center py-3">
+  <p class="m-0 text-center text-white"><i class="fa-regular fa-copyright fa-xs"></i> the recipe hub | Follow us:
+    <i class="fa-brands fa-facebook ms-3" href=""></i>
+    <i class="fa-brands fa-square-instagram ms-3" href=""></i>
+    <i class="fab fa-youtube-square ms-3" href=""></i>
+  </p>
+</footer>
+
 </html>
