--- a/templates/base.html
+++ b/templates/base.html
@@ -98,8 +98,8 @@
         </div>
         {% else %}<!-- else User is not authenticated therefore not a member display simple welcome message -->
         <h2>Welcome! </h2>
-        <p class="mb-0">Feel free to peruse and enjoy. </p>
-        <p class="mb-0">If you'd like to share recipes with us, register now and start sharing!</p>
+        <p class="mb-0">Feel free to peruse and enjoy our recipes.
+        <p class="mb-0">If you'd like to join our community, register now to start sharing your recipes.
         {% endif %}
     </section>
 
