--- a/recipe/templates/recipe/index.html
+++ b/recipe/templates/recipe/index.html
@@ -6,21 +6,19 @@
         {% for recipe in recipe_list %}
         <div class="col-lg-3">
           <div class="card mb-4">
-            <div class=" list card-body">
-                {% if "placeholder" in recipe.featured_image.url %}
-                <img class="img-fluid w-100" style="height: 250px; object-fit: cover"
-                  src="{% static 'images/default.jpg' %}" alt="placeholder image" />
-                {% else %}
-                <img class="img-fluid w-100" style="height: 250px; object-fit: cover"
-                  src=" {{ recipe.featured_image.url }}" alt="{{ recipe.title }}" />
-                {% endif %}
-                <a href="{% url 'recipe:recipe_detail' recipe.slug %}" class="recipe-link">
-                <!-- <a href="#" class="recipe-link"></a> -->
-                <h2 class="card-title pt-2">{{ recipe.title }}</h2>
-                </a>
-                <p class="author text-muted">Author: {{ recipe.author }}</p>
+            {% if "placeholder" in recipe.featured_image.url %}
+              <img class="card-img-top img-fluid w-100" style="height: 250px; object-fit: cover"
+              src="{% static 'images/default.jpg' %}" alt="placeholder image" />
+            {% else %}
+              <img class="card-img-top img-fluid w-100" style="height: 250px; object-fit: cover"
+              src=" {{ recipe.featured_image.url }}" alt="{{ recipe.title }}" />
+            {% endif %}
+            <div class="card-body">
+              <h2 class="card-title pt-2">{{ recipe.title }}</h2>
+              <p class="author text-muted">Author: {{ recipe.author }}</p>
               <hr />
-                <p class="card-text small text-muted">{{ recipe.created_on}}</p>
+              <p class="card-text small text-muted">{{ recipe.created_on}}</p>
+              <a href="{% url 'recipe:recipe_detail' recipe.slug %}" class="stretched-link"></a>
             </div>
           </div>
         </div>
