--- a/recipe/templates/recipe/member_recipes.html
+++ b/recipe/templates/recipe/member_recipes.html
@@ -10,21 +10,19 @@
         {% for recipe in member_list %}
         <div class="col-lg-3">
           <div class="card mb-4">
-            <div class="list card-body">
-              {% if "placeholder" in recipe.featured_image.url %}
+            {% if "placeholder" in recipe.featured_image.url %}
               <img class="img-fluid w-100" style="height: 250px; object-fit: cover"
                 src="{% static 'images/default.jpg' %}" alt="placeholder image" />
               {% else %}
               <img class="img-fluid w-100" style="height: 250px; object-fit: cover"
                 src=" {{ recipe.featured_image.url }}" alt="{{ recipe.title }}" />
               {% endif %}
-              <a href="{% url 'recipe:recipe_detail' recipe.slug %}" class="recipe-link">
-              <!-- <a href="#" class="recipe-link"></a> -->
+            <div class="card-body">
               <h2 class="card-title">{{ recipe.title }}</h2>
-              </a>
               <p class="author text-muted">Author: {{ recipe.author }}</p>
-            <hr />
+              <hr />
               <p class="card-text small text-muted">{{ recipe.created_on}}</p>
+              <a href="{% url 'recipe:recipe_detail' recipe.slug %}" class="stretched-link"></a>
             </div>
           </div>
         </div>
