--- a/static/css/style.css
+++ b/static/css/style.css
@@ -27,8 +27,8 @@ h3 {
     margin-bottom: 0;
 }
 
-.card-title {
-    font-size: 1.1rem;
+.card-text h2 {
+    font-size:smaller;
 }
 
 .nav-link.active {
@@ -39,10 +39,6 @@ h3 {
     border:0;
     color: rgb(13, 110, 253);
     text-decoration:underline;
-}
-
-.list card-body {
-    height: 440px;
 }
 
 textarea#id_description,
@@ -64,4 +60,7 @@ input#id_servings {
 
 input {
     border-radius: 5px;
+}
+
+.custom-textarea {
 }
