--- a/recipe/templates/recipe/member_recipes.html
+++ b/recipe/templates/recipe/member_recipes.html
@@ -17,8 +17,10 @@
               <img class="img-fluid w-100" style="height: 250px; object-fit: cover"
                 src=" {{ recipe.featured_image.url }}" alt="{{ recipe.title }}" />
               {% endif %}
-            <div class="card-body">
-              <h2 class="card-title">{{ recipe.title }}</h2>
+            <div class="card-body pt-3">
+              <div class="title-container mb-2">
+              <h2 class="card-title fs-5" style="height:80px">{{ recipe.title }}</h2>
+              </div>
               <p class="author text-muted">Author: {{ recipe.author }}</p>
               <hr />
               <p class="card-text small text-muted">{{ recipe.created_on}}</p>
