--- a/recipe/templates/recipe/recipe_detail.html
+++ b/recipe/templates/recipe/recipe_detail.html
@@ -20,8 +20,7 @@
   </div>
   <h1 class="recipe-title fs-2">{{ recipe.title }}</h1>
   <p class="recipe-subtitle mb-0">
-    {{ recipe.author }} | {{ recipe.created_on }} | Servings: {{
-    recipe.servings}}
+    {{ recipe.author }} | {{ recipe.created_on }} | Servings: {{ recipe.servings }}
   </p>
   {% if user == recipe.author %}
   <div class="d-flex mb-2">
@@ -64,7 +63,7 @@
             {{ comment.body | linebreaks }}
           </div>
           {% if not comment.approved and comment.author == user %}
-          <p class="approval">This comment is awaiting approval</p>
+          <p class="approval fst-italic">This comment is awaiting approval.</p>
           {% endif %}
         </div>
         {% endfor %}
@@ -78,7 +77,7 @@
         <p>Posting as: {{ user.username }}</p>
         <form id="commentForm" method="post" style="margin-top: 1.3em">
           {{ comment_form }} {% csrf_token %}
-          <button id="submitButton" type="submit" class="btn btn-primary">
+          <button id="submitButton" type="submit" class="btn btn-primary mt-2">
             Submit
           </button>
         </form>
