--- a/recipe/templates/recipe/recipe_detail.html
+++ b/recipe/templates/recipe/recipe_detail.html
@@ -1,5 +1,5 @@
-{% extends 'base.html' %} {% load static %} {% block message %} 
-{% endblock message %} {% block content %}
+{% extends 'base.html' %} {% load static %}
+{% block content %}
 <div class="container">
   <div class="d-md block col-md-6">
     {% if "placeholder" in recipe.featured_image.url %}
@@ -24,12 +24,8 @@
   </p>
   {% if user == recipe.author %}
   <div class="d-flex mb-2">
-    <a href="{% url 'recipe:edit_recipe' recipe.slug %}" class="link me-3"
-      >Edit This Recipe</a
-    >
-    <a href="{% url 'recipe:delete_recipe' recipe.slug %}" class="link"
-      >Delete This Recipe</a
-    >
+    <a href="{% url 'recipe:edit_recipe' recipe.slug %}" class="link me-3">Edit This Recipe</a>
+    <a href="{% url 'recipe:delete_recipe' recipe.slug %}" class="link">Delete This Recipe</a>
   </div>
   {% endif %}
 </div>
@@ -51,9 +47,7 @@
       <h3 class="fs-4">Comments:</h3>
       <div class="card-body">
         {% for comment in comments %}
-        <div
-          class="p-2 comments {% if not comment.approved and comment.author == user %} faded{% elif not comment.approved %} d-none{% endif %}"
-        >
+        <div class="p-2 comments {% if not comment.approved and comment.author == user %} faded{% elif not comment.approved %} d-none{% endif %}">
           <p class="font-weight-bold">
             {{ comment.author }}
             <span class="font-weight-normal"> {{ comment.created_on }} </span>
@@ -64,6 +58,13 @@
           </div>
           {% if not comment.approved and comment.author == user %}
           <p class="approval fst-italic">This comment is awaiting approval.</p>
+          {% endif %} 
+          {% if user.is_authenticated and comment.author == user %}
+            <button class="btn btn-delete btn-sm"
+              comment_id="{{ comment.id }}">Delete</button>
+            <button class="btn btn-edit btn-sm" comment_id="{{ comment.id }}">
+            Edit
+            </button>
           {% endif %}
         </div>
         {% endfor %}
@@ -88,5 +89,31 @@
     </div>
   </div>
 </div>
-
+<!-- Delete confirmation modal -->
+<div class="modal fade" id="deleteModal" tabindex="-1"
+  aria-labelledby="deleteModalLabel" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title"
+          id="deleteModalLabel">Delete comment?</h5>
+        <button type="button" class="btn-close"
+          data-bs-dismiss="modal" aria-label="Close"></button>
+      </div>
+      <div class="modal-body">
+        Are you sure you want to delete your comment?
+        This action cannot be undone.
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-success"
+          data-bs-dismiss="modal">Cancel</button>
+        <a id="deleteConfirm" href="#" class="btn
+          btn-danger">Delete</a>
+      </div>
+    </div>
+  </div>
+</div>
 {% endblock content %}
+{% block extras %}
+<script src="{% static 'js/comments.js' %}"></script>
+{% endblock %}
