--- a/templates/base.html
+++ b/templates/base.html
@@ -42,7 +42,7 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <!-- Left-side navigation links -->
-          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+          <ul class="navbar-nav me-auto mb-2 mb-lg-0 fs-6">
             <li class="nav-item">
               <a class="nav-link {% if request.path == list_url %}active{% endif %}" href="{{ list_url }}">home</a>
             </li>
@@ -75,7 +75,8 @@
       {% if messages %}
       <div class="messages">
         {% for message in messages %}
-        <div class="welcom alert alert-{{ message.tags }}">{{ message }}
+        <div class="welcom alert">
+          <div class="fw-bold alert-{{ message.tags }}">{{ message }}</div>
           <p>Thanks {{ user.username }}! You can add or manage your recipes below: </p>
           {% endfor %}
           {% else %}
@@ -98,7 +99,7 @@
         {% else %}<!-- else User is not authenticated therefore not a member display simple welcome message -->
         <h2>Welcome! </h2>
         <p class="mb-0">Feel free to peruse and enjoy our recipes.
-        <p class="mb-0">If you'd like to join our community, register now to start sharing your recipes.
+        <p class="mb-0">If you'd like to share your recipes, join our community and register now.
         {% endif %}
     </section>
 
@@ -108,6 +109,8 @@
       {% endblock content %}
     </main>
 </div>
+{% block extras %}
+{% endblock %}
 </body>
 </div>
 <!-- Footer -->
