--- a/staticfiles/css/style.css
+++ b/staticfiles/css/style.css
@@ -13,14 +13,29 @@ h3 {
     padding-top: 5%;
 }
 
-.custom-content, {
+.custom-content {
     background-color: #2b3480;
     color: white;
 }
 
 .btn {
     background-color: #c67e10;
-    border:0;
+    border:none;
+    border-radius: 5px;
+    text-transform: lowercase;
+    font-weight:500;
+    color:white;
+    margin-right:5px;
+}
+
+.btn-delete,
+.btn-danger {
+    background-color: #dc3545;
+}
+
+.btn-edit,
+.btn-success {
+    background-color: #28a745;
 }
 
 .author {
@@ -54,7 +69,7 @@ input#id_servings {
 }
 
 .login_page form {
-    padding-top: 2%;
+    padding-top: 1%;
     padding-bottom: 2%;
 }
 
@@ -63,5 +78,11 @@ input {
 }
 
 .approval {
+    color: #842b2f;
+}
+
+.start-pages span.helptext, .start-pages ul {
+    font-weight: 500;
+    font-style: italic;
     color: #842b2f;
 }
